--- a/README
+++ b/README
@@ -2,7 +2,7 @@ requirements:
 - mpd
 - music with correct id3 tags
 - ruby 1.9
-- ruby gems: librmpd rockstar i18n
+- ruby gems: librmpd
 
 You need to apply for a lastfm api key here:
 http://www.last.fm/api/
